--- a/PhotoGallery/app/src/main/res/values/strings.xml
+++ b/PhotoGallery/app/src/main/res/values/strings.xml
@@ -6,4 +6,8 @@
     <string name="stop_polling">Stop polling</string>
     <string name="new_pictures_title">New PhotoGallery Pictures</string>
     <string name="new_pictures_text">You have new pictures in PhotoGallery.</string>
+    <string name="notify_channel_id">GNCID</string>
+    <string name="notify_channel_name">GNCName</string>
+    <string name="notify_channel_description">GNCDescription</string>
+
 </resources>
