--- a/PhotoGallery/app/src/main/res/values/strings.xml
+++ b/PhotoGallery/app/src/main/res/values/strings.xml
@@ -4,8 +4,9 @@
     <string name="clear_search">Clear Search</string>
     <string name="start_polling">Start polling</string>
     <string name="stop_polling">Stop polling</string>
-    <string name="new_pictures_title">New PhotoGallery Pictures</string>
-    <string name="new_pictures_text">You have new pictures in PhotoGallery.</string>
+    <string name="new_pictures_title">GNTitle</string>
+    <string name="new_pictures_text">GNText.</string>
+    <string name="new_pictures_ticker">GNTicker</string>
     <string name="notify_channel_id">GNCID</string>
     <string name="notify_channel_name">GNCName</string>
     <string name="notify_channel_description">GNCDescription</string>
